DirectedWeightedGraph: numerous improvements
- speed up shortest path calculation
- allow shortest path vertices to be obtained
- add additional API methods
- misc code cleanup